nav completed header added

--- a/html/carrers.html
+++ b/html/carrers.html
@@ -1,4 +1,4 @@
-<!-- carrers -->
+<!-- Careers -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -6,12 +6,42 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Careers</title>
     <link rel="stylesheet" href="../sass/main.css">
 </head>
 
 <body>
-
+    <nav>
+        <div class="container">
+            <div class="nav">
+                <input class="nav__input" type="checkbox" id="li3ne">
+                <label class="nav__lable" for="li3ne"><img src="../icons/btn.svg" alt="checkbox"></label>
+                <label class="nav__check" for="li3ne"><img src="../icons/x.svg" alt="x btn"></label>
+                <a class="nav__link" href="../index.html"><img class="nav__link-logo" src="../icons/scoot.svg" alt="scoot"></a>
+                <div class="nav__menus">
+                    <ul class="nav__menus-menu">
+                        <li class="nav__menus-menu--link"><a class="nav__menus-menu--link" href="../html/about.html">About</a></li>
+                        <li class="nav__menus-menu--link"><a class="nav__menus-menu--link" href="#">Location</a></li>
+                        <li class="nav__menus-menu--link"><a class="nav__menus-menu--link" href="#">Careers</a></li>
+                    </ul>
+                    <button class="btn">Get Scootin</button>
+                </div>
+            </div>
+        </div>
+    </nav>
+    <div class="careers">
+        <div class="container">
+            <h2 class="title">Careers</h2>
+            <div class="rounds">
+                <h2 class="rounds__title">Careers</h2>
+                <div class="rounds__round-flex">
+                    <div class="rounds__round-flex--round"></div>
+                    <div class="rounds__round-flex--round"></div>
+                    <div class="rounds__round-flex--white"></div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
