--- a/index.html
+++ b/index.html
@@ -6,12 +6,44 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="../scoot/sass/main.css">
+    <title>HOME</title>
+    <link rel="stylesheet" href="./sass/main.css">
 </head>
 
 <body>
-
+    <header>
+        <nav>
+            <div class="container">
+                <div class="nav">
+                    <input class="nav__input" type="checkbox" id="li3ne">
+                    <label class="nav__lable" for="li3ne"><img src="./icons/btn.svg" alt="checkbox"></label>
+                    <label class="nav__check" for="li3ne"><img src="./icons/x.svg" alt="x btn"></label>
+                    <a class="nav__link" href="#"><img class="nav__link-logo" src="./icons/scoot.svg" alt="scoot"></a>
+                    <div class="nav__menus">
+                        <ul class="nav__menus-menu">
+                            <li class="nav__menus-menu--link"><a class="nav__menus-menu--link" href="./html/about.html">About</a></li>
+                            <li class="nav__menus-menu--link"><a class="nav__menus-menu--link" href="#">Location</a></li>
+                            <li class="nav__menus-menu--link"><a class="nav__menus-menu--link" href="./html/carrers.html">Careers</a></li>
+                        </ul>
+                        <button class="btn">Get Scootin</button>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <div class="bitmap">
+            <div class="container">
+                <h1>Scooter sharing made simple</h1>
+                <div class="blockm">
+                    <img class="blockm__line" src="./icons/yellow-line.svg" alt="yellow line">
+                    <div class="blockm__texts">
+                        <p class="blockm__texts-decoration">Scoot takes the hassle out of urban mobility. Our bikes are placed in convenient locations in each of our cities. Use our app to locate the nearest bike, unlock it with a tap, and you’re away!</p>
+                        <button class="btn">Get Scootin</button>
+                    </div>
+                    <img class="blockm__st" src="./icons/strelka.svg" alt="shower">
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 
 </html>
