with footer part

--- a/html/about.html
+++ b/html/about.html
@@ -1,4 +1,3 @@
-<!-- About -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -11,37 +10,193 @@
 </head>
 
 <body>
-    <nav>
-        <div class="container">
-            <div class="nav">
-                <input class="nav__input" type="checkbox" id="li3ne">
-                <label class="nav__lable" for="li3ne"><img src="../icons/btn.svg" alt="checkbox"></label>
-                <label class="nav__check" for="li3ne"><img src="../icons/x.svg" alt="x btn"></label>
-                <a class="nav__link" href="../index.html"><img class="nav__link-logo" src="../icons/scoot.svg" alt="scoot"></a>
-                <div class="nav__menus">
-                    <ul class="nav__menus-menu">
-                        <li class="nav__menus-menu--link"><a class="nav__menus-menu--link" href="#">About</a></li>
-                        <li class="nav__menus-menu--link"><a class="nav__menus-menu--link" href="#">Location</a></li>
-                        <li class="nav__menus-menu--link"><a class="nav__menus-menu--link" href="../html/carrers.html">Careers</a></li>
-                    </ul>
-                    <button class="btn">Get Scootin</button>
+    <header>
+        <nav>
+            <div class="container">
+                <div class="nav">
+                    <input class="nav__input" type="checkbox" id="li3ne">
+                    <label class="nav__lable" for="li3ne"><img src="../icons/btn.svg" alt="checkbox"></label>
+                    <label class="nav__check" for="li3ne"><img src="../icons/x.svg" alt="x btn"></label>
+                    <a class="nav__link" href="../index.html"><img class="nav__link-logo" src="../icons/scoot.svg" alt="scoot"></a>
+                    <div class="nav__menus">
+                        <ul class="nav__menus-menu">
+                            <li class="nav__menus-menu--link"><a class="nav__menus-menu--link" href="#">About</a></li>
+                            <li class="nav__menus-menu--link"><a class="nav__menus-menu--link" href="#">Location</a></li>
+                            <li class="nav__menus-menu--link"><a class="nav__menus-menu--link" href="../html/carrers.html">Careers</a></li>
+                        </ul>
+                        <button class="btn">Get Scootin</button>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <div class="about">
+            <div class="container">
+                <h2 class="title">About</h2>
+                <div class="rounds">
+                    <h2 class="rounds__title">About</h2>
+                    <div class="rounds__round-flex">
+                        <div class="rounds__round-flex--round"></div>
+                        <div class="rounds__round-flex--round"></div>
+                        <div class="rounds__round-flex--white"></div>
+                    </div>
                 </div>
             </div>
         </div>
-    </nav>
-    <div class="about">
-        <div class="container">
-            <h2 class="title">About</h2>
-            <div class="rounds">
-                <h2 class="rounds__title">About</h2>
-                <div class="rounds__round-flex">
-                    <div class="rounds__round-flex--round"></div>
-                    <div class="rounds__round-flex--round"></div>
-                    <div class="rounds__round-flex--white"></div>
+    </header>
+    <main>
+        <section>
+            <div class="secondPage1">
+                <div class="container">
+                    <div class="secondPage">
+                        <div class="secondPage__text">
+                            <h2 class="secondPage__text-title">Mobility for the digital era</h2>
+                            <p class="secondPage__text-decoration">Getting around should be simple (and even fun!) for everyone. We embrace technology to provide low cost, smart access to scooters at your fingertips.</p>
+                        </div>
+                        <div class="secondPage__content">
+                            <img class="secondPage__content-mobility" src="../images/Bitmap-about-m.png" alt="Mobility" srcset="../images/Bitmap@2x-about-m.png 2x, ../images/Bitmap-about-m.png 1x">
+                            <picture>
+                                <source media="(max-width:510px)" srcset="../icons/gr.svg">
+                                <img class="secondPage__content-st" src="../icons/dd.svg" alt="strelka">
+                            </picture>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="secondPage2">
+                <div class="container">
+                    <div class="secondPage">
+                        <div class="secondPage__content">
+                            <img class="telemetry__webpimgs-topper" src="../icons/con-t.svg" alt="strelka">
+                            <img class="secondPage__content-mobility" src="../images/BitmapaboutCopy.png" alt="Mobility" srcset="../images/BitmapaboutCopy@2x.png 2x, ../images/BitmapaboutCopy.png 1x">
+                        </div>
+                        <div class="secondPage__text">
+                            <h2 class="secondPage__text-titl">Better urban living</h2>
+                            <p class="secondPage__text-decoration">We’re helping connect cities and bring people closer together. Our scooters are also fully-electric and we offset the minimal carbon footprint for each ride.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="container">
+            <div class="card2">
+                <h3 class="card2__title">Our values</h3>
+                <div class="card2__card">
+                    <div class="card2__card-item">
+                        <div class="div-auto-after">
+                            <img class="card2__card-item--img" src="../images/about-card1.png" alt="mobile phone" srcset="../images/@2x-about-card1.png 2x, ../images/about-card1.png 1x">
+                            <span class="card2__card-item--span">01</span>
+                        </div>
+                        <h4 class="card2__card-item--title">Our tech</h4>
+                        <p class="card2__card-item--decoration">We’re using cutting edge technology to drive accessible urban transportation forward. Our fully electric scooters are a joy to ride!</p>
+                    </div>
+                    <div class="card2__card-item">
+                        <div class="div-auto-after">
+                            <img class="card2__card-item--img" src="../images/about-card2.png" alt="motorbike" srcset="../images/about-card-2@2x.png 2x, ../images/about-card2.png 1x">
+                            <span class="card2__card-item--span">02</span>
+                        </div>
+                        <h4 class="card2__card-item--title">Our integrity</h4>
+                        <p class="card2__card-item--decoration">We are fully committed to deliver a great yet safe, sustainable micro-mobility experience in every city we serve.
+                        </p>
+                    </div>
+                    <div class="card2__card-item">
+                        <div class="div-auto-after">
+                            <img class="card2__card-item--img" src="../images/about-card3.png" alt="mobile phone" srcset="../images/about-card3@2x.png 2x, ../images/about-card3.png 1x">
+                            <span class="card2__card-item--span">03</span>
+                        </div>
+                        <h4 class="card2__card-item--title">Our community</h4>
+                        <p class="card2__card-item--decoration">We support every community we serve. All workers are paid a living wage based on their location and are Scoot employees.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="container">
+            <div class="faqs">
+                <h2 class="faqs__title">FAQs</h2>
+                <div class="faqs__block">
+                    <div class="faqs__block_flex">
+                        <h2 class="faqs__block_flex-title">How it works</h2>
+                        <div>
+                            <div class="faqs__block_flex-select">
+                                <div class="flex-with-icon">
+                                    <h3 class="faqs__block_flex-select--title">How do I download the app?</h3>
+                                    <img src="../icons/path.svg" alt="icon">
+                                </div>
+                                <p class="faqs__block_flex-select--decoration">To download the Scoot app, you can search “Scoot” in both the App and Google Play stores. An even simpler way to do it would be to click the relevant link at the bottom of this page and you’ll be re-directed to the correct
+                                    page.
+                                </p>
+                            </div>
+                            <div class="faqs__block_flex-select">
+                                <div class="flex-with-icon">
+                                    <h3 class="faqs__block_flex-select--title">Can I find a nearby Scoots?</h3>
+                                    <img src="../icons/path.svg" alt="icon">
+                                </div>
+                            </div>
+                            <div class="faqs__block_flex-select">
+                                <div class="flex-with-icon">
+                                    <h3 class="faqs__block_flex-select--title">Do I need a license to ride?</h3>
+                                    <img src="../icons/path.svg" alt="icon">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="faqs__block_flex m">
+                        <h2 class="faqs__block_flex-title">Safe driving</h2>
+                        <div>
+                            <div class="faqs__block_flex-select">
+                                <div class="flex-with-icon">
+                                    <h3 class="faqs__block_flex-select--title">Should I wear a helmet?</h3>
+                                    <img src="../icons/path.svg" alt="icon">
+                                </div>
+                                <p class="faqs__block_flex-select--decoration">Yes, please do! All cities have different laws. But we strongly strongly strongly recommend always wearing a helmet regardless of the local laws. We like you and we want you to be as safe as possible while Scooting.</p>
+                            </div>
+                            <div class="faqs__block_flex-select">
+                                <div class="flex-with-icon">
+                                    <h3 class="faqs__block_flex-select--title">How about the rules B regulations?</h3>
+                                    <img src="../icons/path.svg" alt="icon">
+                                </div>
+                            </div>
+                            <div class="faqs__block_flex-select">
+                                <div class="flex-with-icon">
+                                    <h3 class="faqs__block_flex-select--title">What if I damage my Scoot?</h3>
+                                    <img src="../icons/path.svg" alt="icon">
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <div class="before-foooter">
+            <div class="container">
+                <div class="foot">
+                    <h2 class="foot__title">Sign up and Scoot off today</h2>
+                    <div class="foot__buttons">
+                        <button><img src="../images/appstore.png" alt="app store" srcset="../images/app28@2x.png 2x, ../images/appstore.png 1x"></button>
+                        <button><img src="../icons/googleplay.png" alt="google play" srcset="../icons/googleplay29@2x.png 2x, ../icons/googleplay.png 1x"></button>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+        <footer>
+            <div class="container">
+                <div class="footer">
+                    <img src="../icons/scoot-footer.svg" alt="scoot">
+                    <div class="footer__menu">
+                        <ul class="nav__menus-menu">
+                            <li class="nav__menus-menu--link"><a class="nav__menus-menu--link o" href="./html/about.html">About</a></li>
+                            <li class="nav__menus-menu--link"><a class="nav__menus-menu--link o" href="#">Location</a></li>
+                            <li class="nav__menus-menu--link"><a class="nav__menus-menu--link o" href="./html/carrers.html">Careers</a></li>
+                        </ul>
+                        <ul class="footer__menu_logos">
+                            <li><img src="../icons/facebook.svg" alt="facebook"></li>
+                            <li><img src="../icons/twitter.svg" alt="twitter"></li>
+                            <li><img src="../icons/instagram.svg" alt="instagram"></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </footer>
+    </main>
 </body>
 
 </html>
