--- a/index.html
+++ b/index.html
@@ -44,6 +44,110 @@
             </div>
         </div>
     </header>
+    <section class="container">
+        <hr class="back-line">
+        <div class="cards">
+            <div class="cards__card">
+                <span class="cards__card-round"><img src="./icons/card1.svg" alt="tel"></span>
+                <div class="cards__card-text">
+                    <h3 class="cards__card-text--title">Locate with app</h3>
+                    <p class="cards__card-text--decoration">Use the app to find the nearest scooter to you. We are continuously placing scooters in the areas with most demand, so one should never be too far away. </p>
+                </div>
+            </div>
+            <div class="cards__card">
+                <span class="cards__card-round"><img src="./icons/card2.svg" alt="motorbike"></span>
+                <div class="cards__card-text">
+                    <h3 class="cards__card-text--title">Pick your scooter</h3>
+                    <p class="cards__card-text--decoration">We show the most important info for the scooters closest to you. So you know how much charge they have left and can see roughly how much it will cost.</p>
+                </div>
+            </div>
+            <div class="cards__card">
+                <span class="cards__card-round "><img src="./icons/card3.svg " alt="motorbike"></span>
+                <div class="cards__card-text ">
+                    <h3 class="cards__card-text--title ">Locate with app</h3>
+                    <p class="cards__card-text--decoration ">Use the app to find the nearest scooter to you. We are continuously placing scooters in the areas with most demand, so one should never be too far away. </p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="r">
+        <div class="container">
+            <div class="telemetry">
+                <div class="telemetry__text">
+                    <h2 class="telemetry__text-title">Easy to use riding telemetry</h2>
+                    <p class="telemetry__text-decoration">The Scoot app is available with riding telemetry. This means it can show you your average speed, how long you've been using the scooter, your traveling distance, and many more things all in an easy to use app.</p>
+                    <button class="btn">Learn More</button>
+                </div>
+                <div class="telemetry__both">
+                    <picture>
+                        <source media="(max-width:570px)" srcset="./icons/endst.svg">
+                        <img class="telemetry__both-st" src="./icons/st2.svg" alt="strelka">
+                    </picture>
+                    <img class="b" src="./images/telemetry.png" alt="telemetry" srcset="./images/telemetry33@2x.png 2x, ./images/telemetry.png 1x">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="webp">
+        <div class="container">
+            <div class="telemetry">
+                <div class="telemetry__webpimgs">
+                    <img class="telemetry__webpimgs-topper" src="./icons/con-t.svg" alt="strelka">
+                    <img src="./images/BitmapCopy.png" alt="city" srcset="./images/BitmapCopy@2x.png 2x, ./images/BitmapCopy.png 1x">
+                </div>
+                <div class="telemetry__text">
+                    <h2 class="telemetry__text-title">Coming to a city near you</h2>
+                    <p class="telemetry__text-decoration">Scoot is available in 4 major cities so far. We’re expanding rapidly, so be sure to let us know if you want to see us in your hometown. We’re aiming to let our scooters loose on 23 cities over the coming year.</p>
+                    <button class="btn">Learn More</button>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="oip">
+        <div class="container">
+            <div class="telemetry">
+                <div class="telemetry__text">
+                    <h2 class="telemetry__text-title">Zero hassle payments</h2>
+                    <p class="telemetry__text-decoration">Our payment is as easy as one two three. We accept most credit cards and debit cards. You can also link your PayPal account inside the app. Need to pay later? No worries! You can defer payment for up to a month.</p>
+                    <button class="btn">Learn More</button>
+                </div>
+                <div class="for">
+                    <img class="for__deg" src="./icons/endst.svg" alt="strelka">
+                    <img class="for__radius" src="./images/Bitmap-sec3.png" alt="Money" srcset="./images/Bitmap@2x-sec3.png 2x, ./images/Bitmap-sec3.png 1x">
+                </div>
+            </div>
+        </div>
+    </section>
+    <div class="before-foooter">
+        <div class="container">
+            <div class="foot">
+                <h2 class="foot__title">Sign up and Scoot off today</h2>
+                <div class="foot__buttons">
+                    <button><img src="./images/appstore.png" alt="app store" srcset="./images/app28@2x.png 2x, ./images/appstore.png 1x"></button>
+                    <button><img src="./icons/googleplay.png" alt="google play" srcset="./icons/googleplay29@2x.png 2x, ./icons/googleplay.png 1x"></button>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <div class="container">
+            <div class="footer">
+                <img src="./icons/scoot-footer.svg" alt="scoot">
+                <div class="footer__menu">
+                    <ul class="nav__menus-menu">
+                        <li class="nav__menus-menu--link"><a class="nav__menus-menu--link o" href="./html/about.html">About</a></li>
+                        <li class="nav__menus-menu--link"><a class="nav__menus-menu--link o" href="#">Location</a></li>
+                        <li class="nav__menus-menu--link"><a class="nav__menus-menu--link o" href="./html/carrers.html">Careers</a></li>
+                    </ul>
+                    <ul class="footer__menu_logos">
+                        <li><img src="./icons/facebook.svg" alt="facebook"></li>
+                        <li><img src="./icons/twitter.svg" alt="twitter"></li>
+                        <li><img src="./icons/instagram.svg" alt="instagram"></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
