--- a/html/carrers.html
+++ b/html/carrers.html
@@ -1,4 +1,3 @@
-<!-- Careers -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -11,37 +10,159 @@
 </head>
 
 <body>
-    <nav>
-        <div class="container">
-            <div class="nav">
-                <input class="nav__input" type="checkbox" id="li3ne">
-                <label class="nav__lable" for="li3ne"><img src="../icons/btn.svg" alt="checkbox"></label>
-                <label class="nav__check" for="li3ne"><img src="../icons/x.svg" alt="x btn"></label>
-                <a class="nav__link" href="../index.html"><img class="nav__link-logo" src="../icons/scoot.svg" alt="scoot"></a>
-                <div class="nav__menus">
-                    <ul class="nav__menus-menu">
-                        <li class="nav__menus-menu--link"><a class="nav__menus-menu--link" href="../html/about.html">About</a></li>
-                        <li class="nav__menus-menu--link"><a class="nav__menus-menu--link" href="#">Location</a></li>
-                        <li class="nav__menus-menu--link"><a class="nav__menus-menu--link" href="#">Careers</a></li>
-                    </ul>
-                    <button class="btn">Get Scootin</button>
+    <header>
+        <nav>
+            <div class="container">
+                <div class="nav">
+                    <input class="nav__input" type="checkbox" id="li3ne">
+                    <label class="nav__lable" for="li3ne"><img src="../icons/btn.svg" alt="checkbox"></label>
+                    <label class="nav__check" for="li3ne"><img src="../icons/x.svg" alt="x btn"></label>
+                    <a class="nav__link" href="../index.html"><img class="nav__link-logo" src="../icons/scoot.svg" alt="scoot"></a>
+                    <div class="nav__menus">
+                        <ul class="nav__menus-menu">
+                            <li class="nav__menus-menu--link"><a class="nav__menus-menu--link" href="../html/about.html">About</a></li>
+                            <li class="nav__menus-menu--link"><a class="nav__menus-menu--link" href="#">Location</a></li>
+                            <li class="nav__menus-menu--link"><a class="nav__menus-menu--link" href="#">Careers</a></li>
+                        </ul>
+                        <button class="btn">Get Scootin</button>
+                    </div>
+                </div>
+            </div>
+        </nav>
+        <div class="careers">
+            <div class="container">
+                <h2 class="title">Careers</h2>
+                <div class="rounds">
+                    <h2 class="rounds__title">Careers</h2>
+                    <div class="rounds__round-flex">
+                        <div class="rounds__round-flex--round"></div>
+                        <div class="rounds__round-flex--round"></div>
+                        <div class="rounds__round-flex--white"></div>
+                    </div>
                 </div>
             </div>
         </div>
-    </nav>
-    <div class="careers">
+    </header>
+    <section class="r">
         <div class="container">
-            <h2 class="title">Careers</h2>
-            <div class="rounds">
-                <h2 class="rounds__title">Careers</h2>
-                <div class="rounds__round-flex">
-                    <div class="rounds__round-flex--round"></div>
-                    <div class="rounds__round-flex--round"></div>
-                    <div class="rounds__round-flex--white"></div>
+            <div class="telemetry">
+                <div class="telemetry__text">
+                    <h2 class="telemetry__text-title">Care to join our mission?</h2>
+                    <p class="telemetry__text-decoration">We’re always looking for ambitious individuals to help us on our journey. If you’re passionate about our mission to provide clean, accessible transport to improve urban living we want to hear from you!</p>
+                    <button class="btn">Say Hello</button>
+                </div>
+                <div class="telemetry__both">
+                    <picture>
+                        <source media="(max-width:570px)" srcset="../icons/endst.svg">
+                        <img class="telemetry__both-st" src="../icons/st2.svg" alt="strelka">
+                    </picture>
+                    <img class="b n" src="../images/careers-png.png" alt="telemetry" srcset="../images/careers-png@2x.png 2x, ../images/careers-png.png 1x">
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="container">
+        <div class="card2">
+            <h3 class="card2__title">Why join us?</h3>
+            <div class="card2__card">
+                <div class="card2__card-item">
+                    <div class="div-auto-after">
+                        <img class="card2__card-item--img" src="../images/about-card1.png" alt="mobile phone" srcset="../images/@2x-about-card1.png 2x, ../images/about-card1.png 1x">
+                        <span class="card2__card-item--span">01</span>
+                    </div>
+                    <h4 class="card2__card-item--title">Our tech</h4>
+                    <p class="card2__card-item--decoration">We’re using cutting edge technology to drive accessible urban transportation forward. Our fully electric scooters are a joy to ride!</p>
+                </div>
+                <div class="card2__card-item">
+                    <div class="div-auto-after">
+                        <img class="card2__card-item--img" src="../images/about-card2.png" alt="motorbike" srcset="../images/about-card-2@2x.png 2x, ../images/about-card2.png 1x">
+                        <span class="card2__card-item--span">02</span>
+                    </div>
+                    <h4 class="card2__card-item--title">Our integrity</h4>
+                    <p class="card2__card-item--decoration">We are fully committed to deliver a great yet safe, sustainable micro-mobility experience in every city we serve.
+                    </p>
+                </div>
+                <div class="card2__card-item">
+                    <div class="div-auto-after">
+                        <img class="card2__card-item--img" src="../images/about-card3.png" alt="mobile phone" srcset="../images/about-card3@2x.png 2x, ../images/about-card3.png 1x">
+                        <span class="card2__card-item--span">03</span>
+                    </div>
+                    <h4 class="card2__card-item--title">Our community</h4>
+                    <p class="card2__card-item--decoration">We support every community we serve. All workers are paid a living wage based on their location and are Scoot employees.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="container">
+        <div class="hovers">
+            <div class="hovers__item">
+                <div class="hovers__item-inline">
+                    <h3 class="hovers__item-inline--title"><a class="hovers__item-inline--link" href="#">General Manager</a></h3><span class="hovers__item-inline--side">Jakarta, Indonesia</span>
+                </div>
+                <button class="btn">Apply</button>
+            </div>
+            <div class="hovers__item">
+                <div class="hovers__item-inline">
+                    <h3 class="hovers__item-inline--title"><a class="hovers__item-inline--link" href="#">UI/UX Designer</a></h3><span class="hovers__item-inline--side">Yokohama, Japan</span>
+                </div>
+                <button class="btn">Apply</button>
+            </div>
+            <div class="hovers__item">
+                <div class="hovers__item-inline">
+                    <h3 class="hovers__item-inline--title"><a class="hovers__item-inline--link" href="#">Blog Content Copywriter</a></h3><span class="hovers__item-inline--side">New York, United States</span>
+                </div>
+                <button class="btn">Apply</button>
+            </div>
+            <div class="hovers__item">
+                <div class="hovers__item-inline">
+                    <h3 class="hovers__item-inline--title"><a class="hovers__item-inline--link" href="#">Graphic Designer</a></h3><span class="hovers__item-inline--side">New York, United States</span>
+                </div>
+                <button class="btn">Apply</button>
+            </div>
+            <div class="hovers__item">
+                <div class="hovers__item-inline">
+                    <h3 class="hovers__item-inline--title"><a class="hovers__item-inline--link" href="#">Fleet Supervisor</a></h3><span class="hovers__item-inline--side">Jakarta, Indonesia</span>
+                </div>
+                <button class="btn">Apply</button>
+            </div>
+            <div class="hovers__item">
+                <div class="hovers__item-inline">
+                    <h3 class="hovers__item-inline--title"><a class="hovers__item-inline--link" href="#">UX Analyst</a></h3><span class="hovers__item-inline--side">London, United Kingdom</span>
+                </div>
+                <button class="btn">Apply</button>
+            </div>
+        </div>
+    </section>
+    <div class="before-foooter">
+        <div class="container">
+            <div class="foot">
+                <h2 class="foot__title">Sign up and Scoot off today</h2>
+                <div class="foot__buttons">
+                    <button><img src="../images/appstore.png" alt="app store" srcset="../images/app28@2x.png 2x, ../images/appstore.png 1x"></button>
+                    <button><img src="../icons/googleplay.png" alt="google play" srcset="../icons/googleplay29@2x.png 2x, ../icons/googleplay.png 1x"></button>
                 </div>
             </div>
         </div>
     </div>
+    <footer>
+        <div class="container">
+            <div class="footer">
+                <img src="../icons/scoot-footer.svg" alt="scoot">
+                <div class="footer__menu">
+                    <ul class="nav__menus-menu">
+                        <li class="nav__menus-menu--link"><a class="nav__menus-menu--link o" href="./html/about.html">About</a></li>
+                        <li class="nav__menus-menu--link"><a class="nav__menus-menu--link o" href="#">Location</a></li>
+                        <li class="nav__menus-menu--link"><a class="nav__menus-menu--link o" href="./html/carrers.html">Careers</a></li>
+                    </ul>
+                    <ul class="footer__menu_logos">
+                        <li><img src="../icons/facebook.svg" alt="facebook"></li>
+                        <li><img src="../icons/twitter.svg" alt="twitter"></li>
+                        <li><img src="../icons/instagram.svg" alt="instagram"></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
